<resources>
    <string name="app_name">ChallengeAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview:</string>
    <string name="genres">Genres:</string>
    <string name="original_language">Original language:</string>
    <string name="popularity">Popularity:</string>
    <string name="release_date">Release date:</string>
    <string name="production_countries">Production countries:</string>
    <string name="search">Search</string>
    <string name="runtime_minutes">Runtime (minutes):</string>
</resources>